--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
   <!-- Baixa fonte Roboto -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <title>Coup Online</title>
 </head>
 
 <body>
